<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
     >
  <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
              android:layout_height="0dip"
        android:layout_weight="1.0"
             >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            
            <ImageView
                android:id="@+id/iv_codigoQR"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/description_qr"
                android:onClick="btn_qr"
                android:src="@drawable/ic_dark_add_image" />

   
           <ImageButton
            android:id="@+id/btn_folios"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cotentDescription_folios"
   			android:onClick="btn_folio"
   			android:layout_marginTop="5dp"
            android:src="@drawable/ic_light_calendar" />
            
        </LinearLayout>

      

         
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <TextView
              
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sutitulo_seccion_facturas"
                android:textSize="18sp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/button_pressed"
                
                 >
            </TextView>
            
            <EditText
                android:id="@+id/et_rfc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_rfc"
                android:inputType="textCapCharacters" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/et_curp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_curp"
                android:inputType="textCapCharacters" >
            </EditText>

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"
                android:inputType="textCapCharacters" >
            </EditText>

            <EditText
                android:id="@+id/et_direccion"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:gravity="top"
                android:hint="@string/hint_direccion"
                android:inputType="textCapCharacters|textMultiLine"
                android:lines="2"
                android:scrollHorizontally="false" >
            </EditText>

            <EditText
                android:id="@+id/et_sicofi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sicofi"
                android:inputType="textCapCharacters" >
            </EditText>
            
            <EditText
                android:id="@+id/et_iva"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_iva"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>
    </LinearLayout>
     </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btn_guardar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_guardar"
            android:onClick="btn_guardar"
            android:src="@drawable/ic_light_guardar" />
    </LinearLayout>

</LinearLayout>